edited styling to correctly hide list items on scroll behind search bar

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -369,7 +369,7 @@ table {
 }
 
 .selectedListItem {
-  background-color: #212529;
+  background-color: #212529 !important;
   color: white;
 }
 
@@ -404,12 +404,28 @@ table {
 
 .peakListItem {
   cursor: pointer;
+  border-radius: 5px;
+}
+
+.peakListItem:nth-child(odd) {
+  background: lightgray;
 }
 
 .search-bar {
   position: sticky;
   top: 1rem;
-  z-index: 100;
+  z-index: 3;
+}
+
+.search-bar::before {
+  content: "";
+  position: absolute;
+  top: -1rem;
+  left: 0;
+  width: 100%;
+  height: 1rem;
+  background-color: white;
+  z-index: 2;
 }
 
 .completed-peak-card {
